<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/step_details_nsv"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ingredients_title_tv"
            style="@style/subtitleTheme"
            android:text="@string/recipe_ingredients" />

        <TextView
            android:id="@+id/ingredients_tv"
            android:layout_marginBottom="0dp"
            style="@style/plainTextTheme" />

        <!-- A small divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/step_list"
            android:name="br.com.udacity.bakingtime.RecipeListFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            tools:context="br.com.udacity.bakingtime.ui.RecipeStepsActivity"
            tools:listitem="@layout/step_list_content" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>