<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_list"
    android:name="br.com.udacity.bakingtime.RecipeListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="br.com.udacity.bakingtime.ui.RecipeListActivity"
    tools:listitem="@layout/recipe_list_content" />
