...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:padding="16dp"
        android:textIsSelectable="false"
        android:layout_marginEnd="8dp"
...
